# harness

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  deny.toml
.githooks/: commit-msg
.github/workflows/: ci.yml  coverage.yml  release.yml
SEAN START HERE/: USER MANUAL.md
Start Here/: USER MANUAL.md
apps/desktop/: .gitignore  README.md  index.html  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: daemon.rs  main.rs
config/: default.toml
crates/harness-browser/: Cargo.toml
crates/harness-browser/src/: cdp.rs  lib.rs  session.rs  tool.rs
crates/harness-lsp/: Cargo.toml
crates/harness-lsp/src/: client.rs  detect.rs  jsonrpc.rs  lib.rs
crates/harness-mcp/: Cargo.toml
crates/harness-mcp/src/: client.rs  config.rs  lib.rs  tool.rs
crates/harness-memory/: Cargo.toml
crates/harness-memory/src/: lib.rs  memory.rs  session.rs  store.rs
crates/harness-provider-anthropic/: Cargo.toml
crates/harness-provider-anthropic/src/: lib.rs
crates/harness-provider-core/: Cargo.toml
crates/harness-provider-core/src/: error.rs  lib.rs  provider.rs  types.rs
crates/harness-provider-mlx/: Cargo.toml
crates/harness-provider-mlx/src/: lib.rs
crates/harness-provider-ollama/: Cargo.toml
crates/harness-provider-ollama/src/: lib.rs
crates/harness-provider-openai/: Cargo.toml
crates/harness-provider-openai/src/: lib.rs
crates/harness-provider-router/: Cargo.toml
crates/harness-provider-router/src/: lib.rs
crates/harness-provider-xai/: Cargo.toml
crates/harness-provider-xai/src/: client.rs  embed.rs  lib.rs  stream.rs  types.rs
crates/harness-term-graphics/: Cargo.toml
crates/harness-term-graphics/src/: lib.rs
crates/harness-tools/: Cargo.toml
crates/harness-tools/src/: confirm.rs  executor.rs  lib.rs  registry.rs  workspace_root.rs
crates/harness-tools/src/tools/: agent.rs  apply_patch.rs  computer.rs  filesystem.rs  gh.rs  git.rs  mod.rs  search.rs  selfdev.rs  shell.rs  swarm_tool.rs  test_runner.rs
crates/harness-voice/: Cargo.toml
crates/harness-voice/src/: lib.rs  realtime.rs
docs/: INSTALL.md  MIGRATION.md  PUBLIC_RELEASE.md  RELEASE_STATUS.md  SHORTCUTS.md
extensions/vscode/: package.json
extensions/vscode/src/: extension.ts
scripts/: clean_env_history.sh  install.ps1  install.sh
src/: agent.rs  ambient.rs  background.rs  bridges.rs  checkpoint.rs  collab.rs  config.rs  cost.rs  cost_db.rs  daemon.rs  diff_review.rs  events.rs  highlight.rs  main.rs  memory_project.rs  notifications.rs  observability.rs  projects.rs  provider_build.rs  server.rs  swarm.rs  sync.rs  trust.rs  tui.rs
src/cli/: args.rs  mod.rs  wiring.rs
src/cli/commands/: doctor.rs  init.rs  mod.rs  models.rs  project.rs  prompt.rs  self_dev.rs  sessions.rs  status.rs
src/tui/: driver.rs  events.rs  input.rs  mod.rs  render.rs  slash.rs  state.rs  theme.rs
static/: index.html
tests/: cli_smoke_test.rs  error_handling_tests.rs  sandbox_tests.rs  smoke_test.rs
