[workspace]
members = [
    "crates/harness-provider-core",
    "crates/harness-provider-xai",
    "crates/harness-provider-anthropic",
    "crates/harness-provider-openai",
    "crates/harness-provider-ollama",
    "crates/harness-provider-router",
    "crates/harness-tools",
    "crates/harness-memory",
    "crates/harness-mcp",
    "crates/harness-browser",
    "crates/harness-lsp",
    "crates/harness-voice",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Proprietary"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
bytes = "1"
dirs = "5"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
walkdir = "2"
ignore = "0.4"
similar = "2"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", features = ["ws"] }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }

[package]
name = "harness"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "harness"
path = "src/main.rs"

[dependencies]
harness-provider-core = { path = "crates/harness-provider-core" }
harness-provider-xai = { path = "crates/harness-provider-xai" }
harness-provider-anthropic = { path = "crates/harness-provider-anthropic" }
harness-provider-openai = { path = "crates/harness-provider-openai" }
harness-provider-ollama = { path = "crates/harness-provider-ollama" }
harness-provider-router = { path = "crates/harness-provider-router" }
harness-tools = { path = "crates/harness-tools" }
harness-memory = { path = "crates/harness-memory" }
harness-mcp = { path = "crates/harness-mcp" }
harness-browser = { path = "crates/harness-browser" }
harness-lsp = { path = "crates/harness-lsp" }
harness-voice = { path = "crates/harness-voice" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
syntect = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
dotenvy = "0.15.7"
age = "0.11.3"
keyring = "4.0.0"
tar = "0.4.45"
notify-rust = "4.16.0"

[dev-dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tempfile = "3"

[profile.release]
opt-level = 2
debug = 0
codegen-units = 16
incremental = true

# Distribution build: thin LTO, smaller binary
[profile.release-lto]
inherits = "release"
lto = "thin"
codegen-units = 1
strip = true

# Fast self-modification rebuild — debug-info off, opt-level 0 for fast compilation
[profile.selfdev]
inherits = "release"
opt-level = 0
debug = 0
incremental = true
