[package]
name = "harness-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
harness-provider-core = { path = "../harness-provider-core" }
harness-tools = { path = "../harness-tools" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
