[package]
name = "harness-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
harness-provider-core = { path = "../harness-provider-core" }
harness-tools = { path = "../harness-tools" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
