[package]
name = "harness-provider-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
