[package]
name = "harness-provider-router"
version.workspace = true
edition.workspace = true

[dependencies]
harness-provider-core = { path = "../harness-provider-core" }
harness-provider-xai = { path = "../harness-provider-xai" }
harness-provider-anthropic = { path = "../harness-provider-anthropic" }
harness-provider-openai = { path = "../harness-provider-openai" }
harness-provider-ollama = { path = "../harness-provider-ollama" }
harness-provider-mlx = { path = "../harness-provider-mlx" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
