[package]
name = "harness-tools"
version.workspace = true
edition.workspace = true

[dependencies]
harness-provider-core = { path = "../harness-provider-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
similar = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
tempfile = "3"
