[package]
name = "harness-voice"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tempfile = "3"
