[package]
name = "harness-voice"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tempfile = "3"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
base64 = "0.22"
futures-util = "0.3"
