[package]
name = "harness-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "harness_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "harness-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-default", "protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs-next = "2"
tracing-log = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
